--- a/package.json
+++ b/package.json
@@ -3,15 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.8.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "less": "^4.1.3",
-    "less-loader": "^11.1.0",
     "react": "^18.2.0",
+    "react-chrono": "^1.20.0",
+    "react-circle-modal": "^0.0.2",
     "react-dom": "^18.2.0",
+    "react-landing-page": "^2.0.2",
+    "react-modal-video": "^1.2.10",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
+    "rebass": "^4.0.7",
+    "sass": "^1.56.1",
+    "tachyons": "^4.12.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -37,5 +43,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0"
   }
 }
