--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-chrono": "^1.20.0",
     "react-circle-modal": "^0.0.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-landing-page": "^2.0.2",
     "react-modal-video": "^1.2.10",
     "react-router-dom": "^6.4.4",
